Proposals column overflows beyond the bottom edge of the calendar, making it unusable. This is solved now.

--- a/funnel/static/css/schedules.css
+++ b/funnel/static/css/schedules.css
@@ -1,4 +1,7 @@
-.unscheduled { /* try to mimick the look of a real event */
+#proposals .list{
+    overflow-y: auto;
+}
+#proposals .unscheduled { /* try to mimick the look of a real event */
     margin: 10px 0;
     padding: 2px 4px;
     background: #3366CC;
